<resources>

    <string name="app_name">EasyPets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Tabs name-->
    <string name="tab_service">Pet Services</string>
    <string name="tab_hospital">Pet Hospital</string>
    <string name="tab_info">INFO</string>
    <string name="tab_review">REVIEW</string>
    <string name="tab_location">LOCATION</string>

    <!--Labels-->
    <string name="likeLabel">Likes:</string>
    <string name="priceRate">Price:</string>
    <string name="available_for">Available for</string>
    <string name="distanceLabel" translatable="false">%1$skm</string>
    <string name="open_maps">Location</string>
    <string name="opening">Opening now</string>
    <string name="price_filter">Price rate</string>
    <string name="low">low</string>
    <string name="mid">medium</string>
    <string name="high">high</string>
    <string name="popularity">Popularity</string>
    <string name="filter">Filter</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_filter">Filter</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="ok" translatable="false">OK</string>
    <string name="search_hint">Search from your current location</string>
    <string name="filter_button">SEARCH OPTIONS</string>

    <!--Text-->
    <string name="every_day">Every day</string>
    <string name="hour_suffix" />
    <string name="minutes" />
    <string name="to">to</string>
    <string name="google_login_failed">Google login failed.</string>
    <string name="facebook_login_failed">Facebook login failed.</string>
    <string name="login_as">Logged in as %1$s</string>

    <!--Titles-->
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="login">Login</string>

    <!--Values-->
    <string name="default_language_code" translatable="false">th</string>
    <string name="japanese" translatable="false">日本語</string>
    <string name="thai" translatable="false">ภาษาไทย</string>
    <string name="english" translatable="false">English</string>
    <string name="model_name_services" translatable="false">Store</string>
    <string name="model_name_hospital" translatable="false">Hospital</string>
    <string name="error_invalid_service_type" translatable="false">INVALID_SERVICE_TYPE</string>
    <string name="firebase_reference" translatable="false">app/serviceData/</string>
    <string name="icon_storage_ref" translatable="false">PetServiceIcon/</string>
    <string name="banner_storage_ref" translatable="false">PetServiceBanner/</string>
    <string name="facebook_app_id" translatable="false">509673742741220</string>

    <!--Days-->
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>

    <!--Mock Strings-->
    <string name="mock_address">221B Baker St, Marylebone, London</string>
    <string name="mock_time">9 AM to 10 PM</string>
    <string name="mock_tel" translatable="false">0632724678</string>
    <string name="mock_likes_quantity" translatable="false">592</string>
    <string name="mock_description">This is Description\nSee? this is fucking description</string>
    <string name="mock_available">Available for dog, cat</string>

    <!--Sort by attributes-->
    <string name="sort_by_name" translatable="false">name</string>
    <string name="sort_by_likes" translatable="false">likes</string>
    <string name="sort_by_price_rate" translatable="false">price rate</string>
    <string name="sort_by_distance" translatable="false">distance</string>

    <string name="search_results">Search results</string>
    <string name="msg_zero_results">There is no results</string>
    <string name="view_replies">%1$d replies</string>
    <string name="rate_symbol">$</string>
    <string name="all_day">24 Hours</string>
    <string name="launch_google_maps">Launching Google Maps</string>
    <string name="logout">logout</string>
    <string name="facebook_login_text">Login with Facebook</string>
    <string name="clear">clear</string>

</resources>
