<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_pet_service"
            android:icon="@drawable/dog_paw"
            android:title="@string/tab_service" />
        <item
            android:id="@+id/drawer_hospital"
            android:icon="@drawable/hospital"
            android:title="@string/tab_hospital" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/settings"
            android:visible="false" />
    </group>

    <!--    <item android:title="Communicate">
            <menu>

            </menu>
       </item>-->

</menu>
