<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.easypets.champ.easypets.SearchFilterActivity"
    tools:showIn="@layout/activity_search_filter">

    <Switch
        android:id="@+id/switch_is_opening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/opening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textview_price_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/price_filter"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/price_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_is_opening"
        app:layout_constraintVertical_bias="0.736" />

    <LinearLayout
        android:id="@+id/price_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ToggleButton
            android:id="@+id/button_price_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:textOff="@string/low"
            android:textOn="@string/low" />

        <ToggleButton
            android:id="@+id/button_price_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:textOff="@string/mid"
            android:textOn="@string/mid" />

        <ToggleButton
            android:id="@+id/button_price_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:textOff="@string/high"
            android:textOn="@string/high" />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:text="@string/popularity"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_filter" />

    <LinearLayout
        android:id="@+id/likes_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_popularity"
        app:layout_constraintVertical_bias="0.088">

        <ToggleButton
            android:id="@+id/button_one_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:drawableEnd="@drawable/ic_stars_24dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textOff="@string/one"
            android:textOn="@string/one" />

        <ToggleButton
            android:id="@+id/button_two_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:drawableEnd="@drawable/ic_stars_24dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textOff="@string/two"
            android:textOn="@string/two" />

        <ToggleButton
            android:id="@+id/button_three_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:drawableEnd="@drawable/ic_stars_24dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textOff="@string/three"
            android:textOn="@string/three" />

        <ToggleButton
            android:id="@+id/button_four_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:drawableEnd="@drawable/ic_stars_24dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textOff="@string/four"
            android:textOn="@string/four" />

        <ToggleButton
            android:id="@+id/button_five_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_button"
            android:drawableEnd="@drawable/ic_stars_24dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textOff="@string/five"
            android:textOn="@string/five" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/toggle_button_toggled"
        android:text="@string/ok"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
