<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.champ.project.StoreActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_store">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageview_store"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_margin="@dimen/activity_default_margin"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/scenery" />

        <LinearLayout
            android:id="@+id/group_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_store">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_default_margin"
                android:src="@drawable/ic_place_black_24dp"
                android:tint="@color/icon" />

            <TextView
                android:id="@+id/store_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_address"
                android:textColor="@color/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_default_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_store">

            <TextView
                android:id="@+id/store_like_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_default_margin"
                android:text="@string/mock_likes_quantity"
                android:textColor="@color/text" />

            <ImageView
                android:id="@+id/imageview_store_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_default_margin"
                android:src="@drawable/dog_paw"
                android:tint="@color/icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_time_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_address">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_default_margin"
                android:src="@drawable/ic_schedule_black_24dp"
                android:tint="@color/icon" />

            <TextView
                android:id="@+id/store_time_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_time"
                android:textColor="@color/text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_time_open">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_default_margin"
                android:src="@drawable/ic_call_black_24dp"
                android:tint="@color/icon" />

            <TextView
                android:id="@+id/store_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_tel"
                android:textColor="@color/text" />

        </LinearLayout>

        <View
            android:id="@+id/separator_review_layout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/activity_default_margin"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_tel" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>